# sprite-animation-web-win-sdl3-c

./: .gitignore  CMakeLists.txt  README.md  build-exe.bat  build-web.bat  build-win.bat  config-exe.bat  config-web.bat  config-win.bat  run-exe.bat
public/: index.html
src/: main.c
